--- a/SimpleContactDesktopApplication/App.config
+++ b/SimpleContactDesktopApplication/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+<connectionStrings>
+	<add name="con" connectionString="Data Source=DESKTOP-1G21BHF\SQLEXPRESS;Initial Catalog=ContactDB;Integrated Security=True" />
+</connectionStrings>
 </configuration>
